--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -31,7 +31,10 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.2.2
+  provider: ^6.1.2
   shared_preferences: ^2.3.2
+  intl: ^0.17.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
