--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -33,8 +33,14 @@ dependencies:
   http: ^1.2.2
   provider: ^6.1.2
   shared_preferences: ^2.3.2
-  intl: ^0.17.0
+  intl: ^0.19.0
   flutter_typeahead: ^5.2.0
+  pdf: ^3.11.1
+  printing: ^5.13.3
+  open_filex: ^4.5.0
+  path_provider: ^2.1.4
+  syncfusion_flutter_pdfviewer: ^27.1.51
+
 
 
 
@@ -51,7 +57,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
