--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   shared_preferences: ^2.3.2
   intl: ^0.19.0
   flutter_typeahead: ^5.2.0
-  pdf: ^3.11.1
+  pdf: ^3.8.4
   printing: ^5.13.3
   open_filex: ^4.5.0
   path_provider: ^2.1.4
@@ -46,6 +46,12 @@ dependencies:
   cupertino_icons: ^1.0.8
   barcode: ^2.2.8
   flutter_svg: ^2.0.11
+  blue_thermal_printer: ^1.2.3
+  flutter_esc_pos_utils: ^1.0.1
+  permission_handler: ^11.3.1
+
+ 
+
 
 
 dev_dependencies:
